--- a/src/layouts/TopBar/topbar.css
+++ b/src/layouts/TopBar/topbar.css
@@ -48,6 +48,16 @@ nav {
   cursor: pointer;
 }
 
+.nav__list__item > a {
+  text-decoration: none;
+  color: #444;
+}
+
+.nav__list__item > a:hover {
+  color: #000;
+  text-decoration: underline;
+}
+
 .nav__image {
   width: 40px;
   height: 40px;
